media/css/zamboni/zamboni.css
/* Clearfix!!! */
#persona #more-personas:after,
.listing .item:after,
.search-form .basic:after,
.section:after,
.notification .aux:after,
.aux .button-wrapper:after,
.object-lead .button-wrapper:after,
.article.version:after,
.article.review:after,
.grouped_ratings li:after,
.bars:after,
.item:after,
.secondary > div:after,
.listing-header:after,
#review-form p:after {
    content: ".";
    display: block;
    clear: both;
    height: 0;
    visibility: hidden;
}

/************************************/
/*             ELEMENTS             */
/************************************/
.section,
.notification .aux,
.aux .button-wrapper,
.object-lead .button-wrapper {
    overflow: visible;
}

li.usertag {
    overflow: hidden;
}

header {
    display: block;
}

header ol.breadcrumbs {
    margin-bottom: 0;
}

header hgroup h2 {
    margin-bottom: 0.3em;
    margin-top: 0.2em;
}

header hgroup h3 {
    margin-top: 0;
    color: #666;
    font-family: "helvetica neue", arial, helvetica, sans-serif;
    font-size: 16px;
    margin-bottom: 14px;
}

ul.errorlist {
    margin-bottom: 0;
    color: #c00;
}

.html-ltr a.more-link:after {
    content: '\25B8';
    margin-left: .5em;
}
.html-rtl a.more-link:after {
    content: '\25C2';
    margin-right: .5em;
}

#publish_to {
    margin-bottom: .25em;
}

.highlight .more-info {
    float: none;
}

.highlight ul {
    margin-bottom: .5em;
}

.other-author-addons li .addonitem {
    padding-left: 20px;
    background-image: url(../../img/amo2009/icons/icons.png);
    background-repeat: no-repeat;
    background-position: 0px -200px;
}

.html-rtl .other-author-addons li .addonitem {
    padding-right: 20px;
    padding-left: 0;
    background-position: 100% -200px;
}

.html-rtl.inverse .primary {
    float: right;
    clear: right;
}

.html-rtl.inverse .secondary {
    float: left;
    clear: left;
}

.html-rtl .object-lead .notification {
    clear: right;
}

/** Generic Button *********/
a.button:link,
a.button:visited,
button,
input[type=submit],
input[type=button] {
    font-weight: bold;
    color: #fff;
    background: #39f url("../../img/zamboni/button-blue.png") 0 50% repeat-x;
    background: -moz-linear-gradient(top, #7bf 40%, #39f 60%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #7bf), color-stop(60%, #39f));
    border: 1px solid #05e;
    padding: 0 .95em;
    margin: 0;
    display: inline-block;
    line-height: 1.538;
    text-shadow: 0 -1px 0 #05e;
    -moz-box-shadow: inset 0 0 1px rgba(255,255,255,0.1);
    -webkit-box-shadow: inset 0 0 1px rgba(255,255,255,0.1);
    box-shadow: inset 0 0 1px rgba(255,255,255,0.1);
    -moz-border-radius: .95em;
    -webkit-border-radius: .95em;
    border-radius: .95em;
}

button,
input[type=submit],
input[type=button] {
    padding: .2em .95em .3em;
}

.button span,
button span {
    border-left: 2px groove rgba(150,150,150,0.35);
    padding: .3em .5em .2em .65em;
    margin: 0 .25em 0 -.25em;
    display: inline-block;
    line-height: 1.2;
    white-space: normal;
}

.html-rtl .button span,
.html-rtl button span {
    border-left: 0;
    border-right: 2px groove rgba(150,150,150,0.35);
    padding: .3em .65em .2em .5em;
    margin: 0 -.25em 0 .25em;
}

.button.go span,
button.go span {
    border: 0;
    padding: .3em 0 .2em;
    margin: 0;
}

.button.concealed span {
    border-color: rgba(130,160,175,0.15);
}

a.button:hover,
a.button:focus,
button:hover,
button:focus,
input[type=submit]:hover,
input[type=button]:hover,
input[type=submit]:focus,
input[type=button]:focus {
    border-color: #03c;
    -moz-box-shadow: inset 0 0 2px rgba(255,255,255,1);
    -webkit-box-shadow: inset 0 0 2px rgba(255,255,255,1);
    box-shadow: inset 0 0 2px rgba(255,255,255,1);
}

a.button:active {
    border-color: #03c;
    background-image: url("../../img/zamboni/button-blue-on.png");
    background: -moz-linear-gradient(top, #39f 40%, #6fb7ff 60%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #39f), color-stop(60%, #6fb7ff));
    -moz-box-shadow: inset 0 0 2px rgba(0,0,0,.5);
    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,.5);
    box-shadow: inset 0 0 2px rgba(0,0,0,.5);
}

a.button[disabled],
button:disabled,
input[type=submit]:disabled,
input[type=button]:disabled {
    background: #a6a6a6;
    border-color: #666;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    text-shadow: 0 -1px 0 #666;
}

/* larger buttons for emphasis */
a.button.prominent:link,
a.button.prominent:visited,
a.button.prominent:hover,
a.button.prominent:focus,
a.button.prominent:active,
button.prominent,
input[type=button].prominent,
input[type=submit].prominent {
    font-size: 1.2em;
}

/* big search button */
.search-form .basic button {
    top: .35em;
    right: 1.5%;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

/* Some buttons look like links */
button.link {
    background: transparent none;
    text-shadow: none;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    border: 0;
    font-weight: bold;
    color: #05e;
}

button.link:hover,
button.link:focus {
    color: #003595;
    text-decoration: underline;
}

/** =Green buttons: Add, Download, Mobile *********/
a.button.add:link,
a.button.add:visited,
button.add,
input[type=submit].add,
input[type=button].add,
a.button.download:link,
a.button.download:visited,
button.download,
input[type=submit].download,
input[type=button].download,
a.button.mobile:link,
a.button.mobile:visited,
button.mobile,
input[type=button].mobile,
input[type=submit].mobile {
    background: #55a802 url("../../img/zamboni/button-green.png") 0 50% repeat-x;
    background: -moz-linear-gradient(top, #93c85e 30%, #55a802 55%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, #93c85e), color-stop(55%, #55a802));
    border-color: #3a7404;
    text-shadow: 0 -1px 0 #3a7404;
}
/* ... */

